--- a/src/Dialogues/Dialogues.css
+++ b/src/Dialogues/Dialogues.css
@@ -1,5 +1,5 @@
 dialog {
-  z-index: 1;
+  z-index: 100;
   background: var(--dialog-background-color);
   color: var(--primary-color);
   backdrop-filter: blur(10px);
